--- a/SM_back/requirements.txt
+++ b/SM_back/requirements.txt
@@ -4,6 +4,7 @@ cryptography==40.0.2
 Django==3.2
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 drf-jwt==1.19.2
 pycparser==2.21
 PyJWT==2.6.0
